--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     
     </div>
     <div class="sidebar" id="bar" style="display:none">
-            <div type="button" onclick=star1() class="menu" id="menu_01"><a >ME</a></div>
-            <div type="button" onclick=star2() class="menu" id="menu_02"><a >MOVIE</a></div>
-            <div type="button" onclick=star3() class="menu" id="menu_03"><a >SPORTS</a></div>
+            <div type="button" onclick=star1() class="menu" id="menu_01"><a >TED</a></div>
+            <div type="button" onclick=star2() class="menu" id="menu_02"><a href="http://192.168.0.25">PiCam</a></div>
+            <div type="button" onclick=star3() class="menu" id="menu_03"><a >DuctedFanDrone</a></div>
             <div type="button" onclick=star4() class="menu" id="menu_04"><a >AEROSPACE</a></div>
             <div type="button" onclick=star5() class="menu" id="menu_05"><a href="http://eagleeyecansat.tistory.com">CANSAT</a></div>
     </div>    
